Resolving warnings, some code cleanup